--- a/templates/curriculo.html
+++ b/templates/curriculo.html
@@ -80,6 +80,7 @@
   </head>
 
   <body>
+    {% include '_navbar.html' %}
     <h1>Currículo Vitae</h1>
     <a class="url" href="/inicio">Início</a><br />
 
