--- a/templates/lista.html
+++ b/templates/lista.html
@@ -26,6 +26,7 @@
     </style>
   </head>
   <body>
+    {% include '_navbar.html' %}
     <div class="container">
       <div class="page-header">
         <h1>{{ titulo }}</h1>
