--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -22,6 +22,15 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('minhas_reservas') }}">Minhas Reservas</a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('weather.weather') }}">Clima</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('cotacoes') }}">Cotaçoes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+          </li>
           {% if current_user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
@@ -41,6 +50,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('dashboard') }}">Cadastro de Usuários</a>
           </li>
+          
           {% endif %}
         </ul>
       </div>
