--- a/templates/cotacoes.html
+++ b/templates/cotacoes.html
@@ -52,6 +52,7 @@
     </script>
   </head>
   <body>
+    {% include '_navbar.html' %}
     <div class="container">
       <div class="text-center mb-4">
         <h1 class="display-4">Cotação de Moedas</h1>
