--- a/templates/weather/weather.html
+++ b/templates/weather/weather.html
@@ -9,6 +9,7 @@
     />
   </head>
   <body>
+    {% include '_navbar.html' %}
     <div class="container mt-5">
       <h2>Previsão do Tempo</h2>
       <form method="POST">
